Slight fix for offcanvas sidebar on desktop
Previously, there was an unnecessary scrollbar on the page on desktop. Now, it's still there, but only on mobile (still not sure how to make the sidebar not stack...)

--- a/client/styles/offcanvas.less
+++ b/client/styles/offcanvas.less
@@ -25,6 +25,11 @@ footer {
             transition: all .25s ease-out;
   }
 
+  .row-offcanvas
+  .sidebar-offcanvas {
+    height: 0;
+  }
+
   .row-offcanvas-right {
     right: 0;
   }
